# Site-drf

./: Makefile  README.md  pyproject.toml
site_drf/: asgi.py  settings.py  urls.py  wsgi.py
site_drf/drf/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
site_drf/drf/migrations/: 0001_initial.py  0002_sitedrf_user.py
